--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
+        <p>The First Workshop on User Interactions for Building Knowledge</p>
 
       </header>
       <section>
